fixed 5.5 image alignment issue in editor

--- a/sass/editor-style.scss
+++ b/sass/editor-style.scss
@@ -182,7 +182,7 @@ th {
   }
 }
 .wp-block-image {
-  margin: 0;
+  margin: 0 auto;
   line-height: 0;
 }
 .wp-block-image figcaption {
